tests/NormalTests/paczka1/small_fuzzy/29121440.err
Error in line 5: A714 S627 0,3
Error in line 11: 3Vm7E1T3jI S657 3,3
Error in line 12: 3Vm7E1T3jI S792 1,9
